Added Sitecore headless partial

--- a/Pumpkin/appsettings.json
+++ b/Pumpkin/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Sitecore": {
+    "InstanceUri": "https://xp0.sc",
+    "DefaultSiteName": "website",
+    "ApiKey": "ABC59C38-2383-47C7-ADAC-8769FDF6BA49",
+    "RenderingHostUri": "https://localhost:5001",
+    "EnableExperienceEditor": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
