--- a/Pumpkin/Pumpkin.csproj
+++ b/Pumpkin/Pumpkin.csproj
@@ -3,5 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.7" />
+    <PackageReference Include="Sitecore.LayoutService.Client" Version="14.0.1" />
+    <PackageReference Include="Sitecore.AspNet.RenderingEngine" Version="14.0.1" />
+    <PackageReference Include="Sitecore.AspNet.ExperienceEditor" Version="14.0.1" />
+    <PackageReference Include="Sitecore.AspNet.Tracking" Version="14.0.1" />
+    <PackageReference Include="Sitecore.AspNet.Tracking.VisitorIdentification" Version="14.0.1" />
+  </ItemGroup>
 </Project>
